lib/generated_bindings.dart


  late final _OgaProcessorProcessImagesPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<OgaResult> Function(
                  ffi.Pointer<OgaMultiModalProcessor>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<OgaImages>,
                  ffi.Pointer<ffi.Pointer<OgaNamedTensors>>)>>(
      'OgaProcessorProcessImages');
  late final _OgaProcessorProcessImages =
      _OgaProcessorProcessImagesPtr.asFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaMultiModalProcessor>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<OgaImages>,
              ffi.Pointer<ffi.Pointer<OgaNamedTensors>>)>();

  ffi.Pointer<OgaResult> OgaTokenizerDecode(
    ffi.Pointer<OgaTokenizer> arg0,
    ffi.Pointer<ffi.Int32> tokens,
    int token_count,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_string,
  ) {
    return _OgaTokenizerDecode(
      arg0,
      tokens,
      token_count,
      out_string,
    );
  }

  late final _OgaTokenizerDecodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaTokenizer>,
              ffi.Pointer<ffi.Int32>,
              ffi.Size,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('OgaTokenizerDecode');
  late final _OgaTokenizerDecode = _OgaTokenizerDecodePtr.asFunction<
      ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaTokenizer>,
          ffi.Pointer<ffi.Int32>, int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  ffi.Pointer<OgaResult> OgaProcessorDecode(
    ffi.Pointer<OgaMultiModalProcessor> arg0,
    ffi.Pointer<ffi.Int32> tokens,
    int token_count,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_string,
  ) {
    return _OgaProcessorDecode(
      arg0,
      tokens,
      token_count,
      out_string,
    );
  }

  late final _OgaProcessorDecodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaMultiModalProcessor>,
              ffi.Pointer<ffi.Int32>,
              ffi.Size,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('OgaProcessorDecode');
  late final _OgaProcessorDecode = _OgaProcessorDecodePtr.asFunction<
      ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaMultiModalProcessor>,
          ffi.Pointer<ffi.Int32>, int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  ffi.Pointer<OgaResult> OgaCreateTokenizerStream(
    ffi.Pointer<OgaTokenizer> arg0,
    ffi.Pointer<ffi.Pointer<OgaTokenizerStream>> out,
  ) {
    return _OgaCreateTokenizerStream(
      arg0,
      out,
    );
  }

  late final _OgaCreateTokenizerStreamPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaTokenizer>,
                  ffi.Pointer<ffi.Pointer<OgaTokenizerStream>>)>>(
      'OgaCreateTokenizerStream');
  late final _OgaCreateTokenizerStream =
      _OgaCreateTokenizerStreamPtr.asFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaTokenizer>,
              ffi.Pointer<ffi.Pointer<OgaTokenizerStream>>)>();

  ffi.Pointer<OgaResult> OgaCreateTokenizerStreamFromProcessor(
    ffi.Pointer<OgaMultiModalProcessor> arg0,
    ffi.Pointer<ffi.Pointer<OgaTokenizerStream>> out,
  ) {
    return _OgaCreateTokenizerStreamFromProcessor(
      arg0,
      out,
    );
  }

  late final _OgaCreateTokenizerStreamFromProcessorPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<OgaResult> Function(
                  ffi.Pointer<OgaMultiModalProcessor>,
                  ffi.Pointer<ffi.Pointer<OgaTokenizerStream>>)>>(
      'OgaCreateTokenizerStreamFromProcessor');
  late final _OgaCreateTokenizerStreamFromProcessor =
      _OgaCreateTokenizerStreamFromProcessorPtr.asFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaMultiModalProcessor>,
              ffi.Pointer<ffi.Pointer<OgaTokenizerStream>>)>();

  void OgaDestroyTokenizerStream(
    ffi.Pointer<OgaTokenizerStream> arg0,
  ) {
    return _OgaDestroyTokenizerStream(
      arg0,
    );
  }

  late final _OgaDestroyTokenizerStreamPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<OgaTokenizerStream>)>>(
      'OgaDestroyTokenizerStream');
  late final _OgaDestroyTokenizerStream = _OgaDestroyTokenizerStreamPtr
      .asFunction<void Function(ffi.Pointer<OgaTokenizerStream>)>();

  ffi.Pointer<OgaResult> OgaTokenizerStreamDecode(
    ffi.Pointer<OgaTokenizerStream> arg0,
    int token,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out,
  ) {
    return _OgaTokenizerStreamDecode(
      arg0,
      token,
      out,
    );
  }

  late final _OgaTokenizerStreamDecodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaTokenizerStream>,
              ffi.Int32,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('OgaTokenizerStreamDecode');
  late final _OgaTokenizerStreamDecode =
      _OgaTokenizerStreamDecodePtr.asFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaTokenizerStream>, int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  ffi.Pointer<OgaResult> OgaCreateTensorFromBuffer(
    ffi.Pointer<ffi.Void> data,
    ffi.Pointer<ffi.Int64> shape_dims,
    int shape_dims_count,
    OgaElementType element_type,
    ffi.Pointer<ffi.Pointer<OgaTensor>> out,
  ) {
    return _OgaCreateTensorFromBuffer(
      data,
      shape_dims,
      shape_dims_count,
      element_type.value,
      out,
    );
  }

  late final _OgaCreateTensorFromBufferPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<OgaResult> Function(
                  ffi.Pointer<ffi.Void>,
                  ffi.Pointer<ffi.Int64>,
                  ffi.Size,
                  ffi.UnsignedInt,
                  ffi.Pointer<ffi.Pointer<OgaTensor>>)>>(
      'OgaCreateTensorFromBuffer');
  late final _OgaCreateTensorFromBuffer =
      _OgaCreateTensorFromBufferPtr.asFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Int64>,
              int,
              int,
              ffi.Pointer<ffi.Pointer<OgaTensor>>)>();

  void OgaDestroyTensor(
    ffi.Pointer<OgaTensor> tensor,
  ) {
    return _OgaDestroyTensor(
      tensor,
    );
  }

  late final _OgaDestroyTensorPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<OgaTensor>)>>(
          'OgaDestroyTensor');
  late final _OgaDestroyTensor =
      _OgaDestroyTensorPtr.asFunction<void Function(ffi.Pointer<OgaTensor>)>();

  ffi.Pointer<OgaResult> OgaTensorGetType(
    ffi.Pointer<OgaTensor> arg0,
    ffi.Pointer<ffi.UnsignedInt> out,
  ) {
    return _OgaTensorGetType(
      arg0,
      out,
    );
  }

  late final _OgaTensorGetTypePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaTensor>,
              ffi.Pointer<ffi.UnsignedInt>)>>('OgaTensorGetType');
  late final _OgaTensorGetType = _OgaTensorGetTypePtr.asFunction<
      ffi.Pointer<OgaResult> Function(
          ffi.Pointer<OgaTensor>, ffi.Pointer<ffi.UnsignedInt>)>();

  ffi.Pointer<OgaResult> OgaTensorGetShapeRank(
    ffi.Pointer<OgaTensor> arg0,
    ffi.Pointer<ffi.Size> out,
  ) {
    return _OgaTensorGetShapeRank(
      arg0,
      out,
    );
  }

  late final _OgaTensorGetShapeRankPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaTensor>,
              ffi.Pointer<ffi.Size>)>>('OgaTensorGetShapeRank');
  late final _OgaTensorGetShapeRank = _OgaTensorGetShapeRankPtr.asFunction<
      ffi.Pointer<OgaResult> Function(
          ffi.Pointer<OgaTensor>, ffi.Pointer<ffi.Size>)>();

  ffi.Pointer<OgaResult> OgaTensorGetShape(
    ffi.Pointer<OgaTensor> arg0,
    ffi.Pointer<ffi.Int64> shape_dims,
    int shape_dims_count,
  ) {
    return _OgaTensorGetShape(
      arg0,
      shape_dims,
      shape_dims_count,
    );
  }

  late final _OgaTensorGetShapePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaTensor>,
              ffi.Pointer<ffi.Int64>, ffi.Size)>>('OgaTensorGetShape');
  late final _OgaTensorGetShape = _OgaTensorGetShapePtr.asFunction<
      ffi.Pointer<OgaResult> Function(
          ffi.Pointer<OgaTensor>, ffi.Pointer<ffi.Int64>, int)>();

  ffi.Pointer<OgaResult> OgaTensorGetData(
    ffi.Pointer<OgaTensor> arg0,
    ffi.Pointer<ffi.Pointer<ffi.Void>> out,
  ) {
    return _OgaTensorGetData(
      arg0,
      out,
    );
  }

  late final _OgaTensorGetDataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaTensor>,
              ffi.Pointer<ffi.Pointer<ffi.Void>>)>>('OgaTensorGetData');
  late final _OgaTensorGetData = _OgaTensorGetDataPtr.asFunction<
      ffi.Pointer<OgaResult> Function(
          ffi.Pointer<OgaTensor>, ffi.Pointer<ffi.Pointer<ffi.Void>>)>();

  ffi.Pointer<OgaResult> OgaSetCurrentGpuDeviceId(
    int device_id,
  ) {
    return _OgaSetCurrentGpuDeviceId(
      device_id,
    );
  }

  late final _OgaSetCurrentGpuDeviceIdPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<OgaResult> Function(ffi.Int)>>(
          'OgaSetCurrentGpuDeviceId');
  late final _OgaSetCurrentGpuDeviceId = _OgaSetCurrentGpuDeviceIdPtr
      .asFunction<ffi.Pointer<OgaResult> Function(int)>();

  ffi.Pointer<OgaResult> OgaGetCurrentGpuDeviceId(
    ffi.Pointer<ffi.Int> device_id,
  ) {
    return _OgaGetCurrentGpuDeviceId(
      device_id,
    );
  }

  late final _OgaGetCurrentGpuDeviceIdPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<ffi.Int>)>>('OgaGetCurrentGpuDeviceId');
  late final _OgaGetCurrentGpuDeviceId = _OgaGetCurrentGpuDeviceIdPtr
      .asFunction<ffi.Pointer<OgaResult> Function(ffi.Pointer<ffi.Int>)>();
}

final class __fsid_t extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Int> __val;
}

final class max_align_t extends ffi.Opaque {}

enum OgaElementType {
  OgaElementType_undefined(0),
  OgaElementType_float32(1),
  OgaElementType_uint8(2),
  OgaElementType_int8(3),
  OgaElementType_uint16(4),
  OgaElementType_int16(5),
  OgaElementType_int32(6),
  OgaElementType_int64(7),
  OgaElementType_string(8),
  OgaElementType_bool(9),
  OgaElementType_float16(10),
  OgaElementType_float64(11),
  OgaElementType_uint32(12),
  OgaElementType_uint64(13);

  final int value;
  const OgaElementType(this.value);

  static OgaElementType fromValue(int value) => switch (value) {
        0 => OgaElementType_undefined,
        1 => OgaElementType_float32,
        2 => OgaElementType_uint8,
        3 => OgaElementType_int8,
        4 => OgaElementType_uint16,
        5 => OgaElementType_int16,
        6 => OgaElementType_int32,
        7 => OgaElementType_int64,
        8 => OgaElementType_string,
        9 => OgaElementType_bool,
        10 => OgaElementType_float16,
        11 => OgaElementType_float64,
        12 => OgaElementType_uint32,
        13 => OgaElementType_uint64,
        _ => throw ArgumentError("Unknown value for OgaElementType: $value"),
      };
}

final class OgaResult extends ffi.Opaque {}

final class OgaGeneratorParams extends ffi.Opaque {}

final class OgaGenerator extends ffi.Opaque {}

final class OgaModel extends ffi.Opaque {}

final class OgaSequences extends ffi.Opaque {}

final class OgaTokenizer extends ffi.Opaque {}

final class OgaTokenizerStream extends ffi.Opaque {}

final class OgaTensor extends ffi.Opaque {}

final class OgaImages extends ffi.Opaque {}

final class OgaNamedTensors extends ffi.Opaque {}

final class OgaMultiModalProcessor extends ffi.Opaque {}

const int _STDINT_H = 1;

const int _FEATURES_H = 1;

const int _DEFAULT_SOURCE = 1;

const int __GLIBC_USE_ISOC2X = 1;

const int __USE_ISOC11 = 1;

const int __USE_ISOC99 = 1;

const int __USE_ISOC95 = 1;

const int _POSIX_SOURCE = 1;

const int _POSIX_C_SOURCE = 200809;

const int __USE_POSIX = 1;

const int __USE_POSIX2 = 1;

const int __USE_POSIX199309 = 1;
